--- a/style.css
+++ b/style.css
@@ -40,6 +40,12 @@ a:visited {
   color: var(--color-brand--1);
 }
 
+/* Vibrate */
+.vibrate {
+  padding: 2rem;
+  margin-bottom: 2rem;
+}
+
 /* SIDEBAR */
 .sidebar {
   flex-basis: 50rem;
